--- a/消费流程.md
+++ b/消费流程.md
@@ -1,8 +1,8 @@
 ## 流程
 
-------
 
-1. Consumer 配置 Router 地址，要订阅的 Topic，所在的 Group
+
+1. Consumer 配置 Router  地址，要订阅的 Topic，所在的 Group
 
 2. Consumer 配置消费接口 MessageListener 接收消息
 
@@ -12,7 +12,7 @@
 
    3.2 将 Topic 、Group、Queue 发送给选出的 Broker 进行消费
 
-   3.3 Broker 端存放了 <topic@group, <queueId, offset >> consumerOffsetTable 用于存放 Consumer 已经消费过的最新偏移
+   3.3 Broker 端存放了 <topic@group, <queueId, offset >> consumeOffsetTable 用于存放 Consumer 已经消费过的最新偏移
 
    3.4 根据 offset 从  ConsumeQueue 取出 CommitLog Offset
 
@@ -22,16 +22,45 @@
 
    3.7 Consumer 接收到消息后回调 MessageListener 中设置好的方法
 
-   3.8 不断重复 3.1-3.7
+   3.8 Consumer 消费成功后，将消费完的信息发送给集群内的所有 Broker
 
+   3.9 Broker 在接收到信息后更新将消费进度落盘
+   
+   3.10 不断重复 3.1-3.9
+   
    
 
 
 
 ## 设计理念
 
-------
 
-1. 设计 Queue 的目的主要是为了提高消费的速度。当多个 Consumer 并发消费的时候，为了尽可能的避免两个消费者消费到了同一条数据，需要对整个 consumerOffsetTable 加锁，引入 Queue 之后则可以释放 consumerOffsetTable 锁。为什么说释放这和 RockcetMQ 的设计理念有关，尽可能保证速度的前提下去照顾到重复消费问题，也就是说 RocketMQ 无法做到防止重复消费。RocketMQ 引入 Queue 之后，在 Consumer 端完成 Queue 的负载均衡，这样不同的消费者访问不同的 Queue 就可以使得消费不冲突，避免 Broker 端加锁
-2. consumerOffsetTable 中的 offset 并非是 CommitLog 中消息的 offset，如果是 CommitLog 中的 offset ，那么就还得有个额外的数据结构存放该 Queue 下一条数据的 offset。这里的 offset 指的是在 ConsumerQueue 文件中的第几条数据，ConsumerQueue 存放了消息在 CommitLog 中的偏移，且里面的数据被设计成了定长，所以可以通过 offset 直接定位到数据，然后再定位到 CommitLog 中的偏移去取数据
+
+1. 设计 Queue 的目的主要是为了提高消费的速度。当多个 Consumer 并发消费的时候，为了尽可能的避免两个消费者消费到了同一条数据，需要对整个 consumeOffsetTable 加锁，引入 Queue 之后则可以释放 consumeOffsetTable 锁。这和 RockcetMQ 的设计理念有关，尽可能保证速度的前提下去照顾到重复消费问题，即便 RocketMQ 无法做到完全防止重复消费。RocketMQ 引入 Queue 之后，在 Consumer 端完成 Queue 的负载均衡，这样不同的消费者访问不同的 Queue 就可以使得消费不冲突，避免 Broker 端加锁
+2. consumeOffsetTable 中的 offset 并非是 CommitLog 中消息的 offset，如果是 CommitLog 中的 offset ，指的是在 ConsumeQueue 文件中的第几条数据，ConsumeQueue 存放了消息在 CommitLog 中的偏移，且里面的数据被设计成了定长，所以可以通过 offset 直接定位到 ConsumeQueue  中的数据，然后再定位到 CommitLog 中的偏移去取数据
 3. 设计 ConsumeQueue 的目的是为了提高查询的效率。因为所有的消息都被按顺序放到 CommitLog 文件中，如果要查找特定的消息就需要遍历一遍 CommitLog，要解决就需要引入索引，要避免服务宕机导致索引丢失则需要引入持久化
+
+
+
+## 问题
+
+
+
+Q：同一个 group 中的消费如何保证不重复消费，也就是一条消息同时被同组的多个消费者消费的情况
+
+A：在计算更新 offset 的时候加锁，一个 group 一个锁，为了细化锁的粒度，引入 queue，group + queue 提供并发度
+
+
+
+Q：消费锁如何设计
+
+A：引入 consumequeue，用于保存 group 中每个 queue 在 CommitLog 中的位置，可以理解为是 queueIndex，里面的每条信息都是等大小的，比如设计为 {group,queue,offsetincommitlog}
+
+在 broker 中保存 Map<group+queue，num> 用于作为 consumequeue 文件的索引，同时保存 Map<group+queue，offset> 表示当前已消费的偏移，当 offset < num 时表示还可以继续消费。num 数在消息进入后需要实时更新
+
+
+
+A：同组下多个消费者和一个消费者的消费方式有何区别
+
+Q：本质没区别，消费者会定时的不断的从每一个 queue 中取消息，也就是会从 broker 信息那得知总共有多少个 queue，然后循环取数据
+
